--- a/pom.xml
+++ b/pom.xml
@@ -109,5 +109,11 @@
             <artifactId>zMenu-API</artifactId>
             <version>1.0.0.9</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.MilkBowl</groupId>
+            <artifactId>VaultAPI</artifactId>
+            <version>1.7</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
