:construction: Add button and lot of stuff

--- a/src/main/resources/economies.yml
+++ b/src/main/resources/economies.yml
@@ -1,6 +1,7 @@
 economies:
   VAULT:
-    name: "Vault"
+    name: vault
     format: "v"
     currency: "%price%$"
     isEnable: true
+    denyMessage: "&cYou don’t have enough money to buy this."
