--- a/src/main/resources/inventories/1_13/armors.yml
+++ b/src/main/resources/inventories/1_13/armors.yml
@@ -7,40 +7,70 @@ items:
   diamond_helmet:
     item:
       material: DIAMOND_HELMET
+    type: ZSHOP_ITEM
+    buyPrice: 5.0
+    sellPrice: 0
     slot: 20
   diamond_chestplate:
     item:
       material: DIAMOND_CHESTPLATE
+    type: ZSHOP_ITEM
+    buyPrice: 5.0
+    sellPrice: 0
     slot: 21
   diamond_leggings:
     item:
       material: DIAMOND_LEGGINGS
+    type: ZSHOP_ITEM
+    buyPrice: 5.0
+    sellPrice: 0
     slot: 22
   diamond_boots:
     item:
       material: DIAMOND_BOOTS
+    type: ZSHOP_ITEM
+    buyPrice: 5.0
+    sellPrice: 0
     slot: 23
   diamond_sword:
     item:
       material: DIAMOND_SWORD
+    type: ZSHOP_ITEM
+    buyPrice: 5.0
+    sellPrice: 0
     slot: 24
   netherite_helmet:
     item:
       material: NETHERITE_HELMET
+    type: ZSHOP_ITEM
+    buyPrice: 5.0
+    sellPrice: 0
     slot: 29
   netherite_chestplate:
     item:
       material: NETHERITE_CHESTPLATE
+    type: ZSHOP_ITEM
+    buyPrice: 5.0
+    sellPrice: 0
     slot: 30
   netherite_leggings:
     item:
       material: NETHERITE_LEGGINGS
+    type: ZSHOP_ITEM
+    buyPrice: 5.0
+    sellPrice: 0
     slot: 31
   netherite_boots:
     item:
       material: NETHERITE_BOOTS
+    type: ZSHOP_ITEM
+    buyPrice: 5.0
+    sellPrice: 0
     slot: 32
   netherite_sword:
     item:
       material: NETHERITE_SWORD
+    type: ZSHOP_ITEM
+    buyPrice: 5.0
+    sellPrice: 0
     slot: 33
