--- a/src/main/resources/patterns/1_13/return_home.yml
+++ b/src/main/resources/patterns/1_13/return_home.yml
@@ -3,7 +3,7 @@ size: 54
 items:
   playerHead:
     isPermanent: true
-    type: "INVENTORY"
+    type: INVENTORY
     inventory: "main_shop"
     plugin: "zShop"
     item:
