--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@
         <dependency>
             <groupId>com.github.Maxlego08</groupId>
             <artifactId>zMenu-API</artifactId>
-            <version>1.0.0.9</version>
+            <version>93dedcc854</version>
         </dependency>
         <dependency>
             <groupId>com.github.MilkBowl</groupId>
