--- a/src/main/resources/inventories/1_13/redstones.yml
+++ b/src/main/resources/inventories/1_13/redstones.yml
@@ -9,66 +9,111 @@ items:
   redstone:
     item:
       material: REDSTONE
+    type: ZSHOP_ITEM
+    buyPrice: 5.0
+    sellPrice: 0
     slot: 20
   redstone_torch:
     item:
       material: REDSTONE_TORCH
+    type: ZSHOP_ITEM
+    buyPrice: 5.0
+    sellPrice: 0
     slot: 21
   repeater:
     item:
       material: REPEATER
+    type: ZSHOP_ITEM
+    buyPrice: 5.0
+    sellPrice: 0
     slot: 22
   comparator:
     item:
       material: COMPARATOR
+    type: ZSHOP_ITEM
+    buyPrice: 5.0
+    sellPrice: 0
     slot: 23
   level:
     item:
       material: LEVER
+    type: ZSHOP_ITEM
+    buyPrice: 5.0
+    sellPrice: 0
     slot: 24
   stone_button:
     item:
       material: STONE_BUTTON
+    type: ZSHOP_ITEM
+    buyPrice: 5.0
+    sellPrice: 0
     slot: 29
   piston:
     item:
       material: PISTON
+    type: ZSHOP_ITEM
+    buyPrice: 5.0
+    sellPrice: 0
     slot: 30
   sticky_piston:
     item:
       material: STICKY_PISTON
+    type: ZSHOP_ITEM
+    buyPrice: 5.0
+    sellPrice: 0
     slot: 31
   redstone_block:
     item:
       material: REDSTONE_BLOCK
+    type: ZSHOP_ITEM
+    buyPrice: 5.0
+    sellPrice: 0
     slot: 32
   tripwire_hook:
     item:
       material: TRIPWIRE_HOOK
+    type: ZSHOP_ITEM
+    buyPrice: 5.0
+    sellPrice: 0
     slot: 33
   # Second page
   slime_block:
     item:
       material: SLIME_BLOCK
+    type: ZSHOP_ITEM
+    buyPrice: 5.0
+    sellPrice: 0
     slot: 20
     page: 2
   dispenser:
     item:
       material: DISPENSER
+    type: ZSHOP_ITEM
+    buyPrice: 5.0
+    sellPrice: 0
     slot: 21
     page: 2
   dropper:
     item:
       material: DROPPER
+    type: ZSHOP_ITEM
+    buyPrice: 5.0
+    sellPrice: 0
     slot: 22
     page: 2
   hopper:
     item:
       material: HOPPER
+    type: ZSHOP_ITEM
+    buyPrice: 5.0
+    sellPrice: 0
     slot: 23
     page: 2
   observer:
     item:
       material: OBSERVER
+    type: ZSHOP_ITEM
+    buyPrice: 5.0
+    sellPrice: 0
     slot: 24
     page: 2
