:memo: Add TokenManager economy

--- a/pom.xml
+++ b/pom.xml
@@ -135,5 +135,16 @@
             <version>6.14.1</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.Realizedd</groupId>
+            <artifactId>TokenManager</artifactId>
+            <version>3.2.4</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
 </project>
