--- a/src/main/resources/patterns/1_13/decoration.yml
+++ b/src/main/resources/patterns/1_13/decoration.yml
@@ -3,6 +3,8 @@ size: 54
 items:
   playerHead:
     isPermanent: true
+    # Update the button when the player clicks on the inventory
+    updateOnClick: true
     item:
       material: PLAYER_HEAD
       playerHead: "%player%"
