:construction: Start convert command (ShopGuiPlus to zShop)

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -13,17 +13,17 @@ defaultLore:
   - "&f» &7Buying price&8: &e%buyPrice%"
   - "&f» &7Selling price&8: &e%sellPrice%"
   - ""
-  - "&f➥ &7Left click to &f&nʙᴜʏ"
-  - "&f➥ &7Click wheel (or drop key) to &f&nsᴇʟʟ ᴇᴠᴇʀʏᴛʜɪɴɢ"
-  - "&f➥ &7Right click to &f&nsᴇʟʟ"
+  - "&f➥ &r&7Left click to &f&nʙᴜʏ"
+  - "&f➥ &r&7Click wheel (or drop key) to &f&nsᴇʟʟ ᴇᴠᴇʀʏᴛʜɪɴɢ"
+  - "&f➥ &r&7Right click to &f&nsᴇʟʟ"
 
 pricesModifier:
   - permission: "zshop.prices.vip"
     type: SELL
-    modifier: 1.5 # Multiplie sell price by x3.0 (+50%, 10 * 1.5 = 15)
+    modifier: 1.5 # Multiplie sell price by x1.5 (+50%, 10 * 1.5 = 15)
   - permission: "zshop.prices.eternal"
     type: SELL
-    modifier: 2.0 # Multiplie sell price by x3.0 (+100%, 10 * 2.0 = 20)
+    modifier: 2.0 # Multiplie sell price by x2.0 (+100%, 10 * 2.0 = 20)
   - permission: "zshop.prices.legend.buy"
     type: BUY
     modifier: 0.9 # Multiplie buy price by x0.9 (-10%, 10 * 0.9 = 9)
