--- a/src/main/resources/inventories/1_13/categories/mics.yml
+++ b/src/main/resources/inventories/1_13/categories/mics.yml
@@ -8,43 +8,44 @@ items:
     item:
       material: BEACON
     type: ZSHOP_ITEM
-    buyPrice: 5.0
+    buyPrice: 15000.0
     sellPrice: 0
     slot: 20
   enchanting_table:
     item:
       material: ENCHANTING_TABLE
     type: ZSHOP_ITEM
-    buyPrice: 5.0
+    buyPrice: 500.0
     sellPrice: 0
     slot: 21
   ender_chest:
     item:
       material: ENDER_CHEST
     type: ZSHOP_ITEM
-    buyPrice: 5.0
+    buyPrice: 1000.0
     sellPrice: 0
     slot: 22
   experience_bottle:
     item:
       material: EXPERIENCE_BOTTLE
+      amount: 64
     type: ZSHOP_ITEM
-    buyPrice: 5.0
-    sellPrice: 0
+    buyPrice: 250.0
+    sellPrice: 5
     slot: 23
   brewing_stand:
     item:
       material: BREWING_STAND
     type: ZSHOP_ITEM
-    buyPrice: 5.0
+    buyPrice: 250.0
     sellPrice: 0
     slot: 24
   book:
     item:
       material: BOOK
     type: ZSHOP_ITEM
-    buyPrice: 5.0
-    sellPrice: 0
+    buyPrice: 100.0
+    sellPrice: 5
     slot: 29
   enchanted_book:
     item:
@@ -55,3 +56,24 @@ items:
     buyPrice: 500.0
     sellPrice: 0
     slot: 30
+  nameTag:
+    type: ZSHOP_ITEM
+    item:
+      material: NAME_TAG
+    buyPrice: 100.0
+    sellPrice: 10.0
+    slot: 31
+  saddle:
+    type: ZSHOP_ITEM
+    item:
+      material: SADDLE
+    buyPrice: 200.0
+    sellPrice: 50.0
+    slot: 32
+  cauldron:
+    type: ZSHOP_ITEM
+    item:
+      material: CAULDRON
+    buyPrice: 300.0
+    sellPrice: 30.0
+    slot: 33
