--- a/src/main/resources/inventories/categories/blocks.yml
+++ b/src/main/resources/inventories/categories/blocks.yml
@@ -13,7 +13,7 @@
 #
 #########################################################################################################################################
 
-name: "&e★ #5d8d50ʙʟᴏᴄᴋs &e★"
+ame: "&e★ #5d8d50ʙʟᴏᴄᴋs &e★"
 size: 54
 updateInterval: 1
 patterns:
